tests/baselines/reference/defaultBestCommonTypesHaveDecls.errors.txt
defaultBestCommonTypesHaveDecls.ts(2,1): error TS2454: Variable 'obj1' is used before being assigned.
defaultBestCommonTypesHaveDecls.ts(2,6): error TS2339: Property 'length' does not exist on type '{}'.
defaultBestCommonTypesHaveDecls.ts(5,1): error TS2454: Variable 'obj2' is used before being assigned.
defaultBestCommonTypesHaveDecls.ts(5,6): error TS2339: Property 'length' does not exist on type 'Object'.
defaultBestCommonTypesHaveDecls.ts(7,37): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
defaultBestCommonTypesHaveDecls.ts(8,24): error TS2345: Argument of type '""' is not assignable to parameter of type '1'.
defaultBestCommonTypesHaveDecls.ts(9,27): error TS2339: Property 'length' does not exist on type 'number'.
defaultBestCommonTypesHaveDecls.ts(13,28): error TS2339: Property 'length' does not exist on type 'number'.


==== defaultBestCommonTypesHaveDecls.ts (8 errors) ====
    var obj1: {};
    obj1.length;
    ~~~~
!!! error TS2454: Variable 'obj1' is used before being assigned.
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    
    var obj2: Object;
    obj2.length;
    ~~~~
!!! error TS2454: Variable 'obj2' is used before being assigned.
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'Object'.
    
    function concat<T>(x: T, y: T): T { return null; }
                                        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    var result = concat(1, ""); // error
                           ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '1'.
    var elementCount = result.length; 
                              ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'number'.
    
    function concat2<T, U>(x: T, y: U) { return null; }
    var result2 = concat2(1, ""); // result2 will be number|string
    var elementCount2 = result.length; 
                               ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'number'.
    
    